// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components App 1`] = `
<div
  className="App"
>
  <div>
    <nav
      className="navbar navbar-expand-true navbar-dark bg-dark"
    >
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
    </nav>
    <div>
      <div
        className="bm-overlay"
        onClick={[Function]}
        style={
          Object {
            "MozTransform": "translate3d(100%, 0, 0)",
            "MsTransform": "translate3d(100%, 0, 0)",
            "OTransform": "translate3d(100%, 0, 0)",
            "WebkitTransform": "translate3d(100%, 0, 0)",
            "background": "rgba(0, 0, 0, 0.3)",
            "height": "100%",
            "opacity": 0,
            "position": "fixed",
            "transform": "translate3d(100%, 0, 0)",
            "transition": "opacity 0.3s, transform 0s 0.3s",
            "width": "100%",
            "zIndex": 1000,
          }
        }
      />
      <div
        className="bm-menu-wrap"
        id=""
        style={
          Object {
            "MozTransform": "translate3d(-100%, 0, 0)",
            "MsTransform": "translate3d(-100%, 0, 0)",
            "OTransform": "translate3d(-100%, 0, 0)",
            "WebkitTransform": "translate3d(-100%, 0, 0)",
            "height": "100%",
            "position": "fixed",
            "right": "inherit",
            "transform": "translate3d(-100%, 0, 0)",
            "transition": "all 0.5s",
            "width": "300px",
            "zIndex": 1100,
          }
        }
      >
        <div
          className="bm-menu"
          style={
            Object {
              "boxSizing": "border-box",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <nav
            className="bm-item-list"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="bm-item menu-item "
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <span
                className="circle"
              />
              <a
                href="/home"
                onClick={[Function]}
              >
                Home
              </a>
            </div>
            <div
              className="bm-item menu-item "
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <span
                className="circle"
              />
              <a
                href="/property/search"
                onClick={[Function]}
              >
                Property Search
              </a>
            </div>
            <div
              className="bm-item menu-item "
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <span
                className="circle"
              />
              <a
                href="/property/manage"
                onClick={[Function]}
              >
                Manage My Properties
              </a>
            </div>
            <div
              className="bm-item menu-item "
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <span
                className="circle"
              />
              <a
                href="/property/new"
                onClick={[Function]}
              >
                Create New Property
              </a>
            </div>
            <div
              className="bm-item menu-item "
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex={-1}
            >
              <span
                className="circle"
              />
              <a
                href="/logout"
                onClick={[Function]}
              >
                Logout
              </a>
            </div>
          </nav>
        </div>
      </div>
    </div>
    <div>
      <section
        className="section"
      >
        <div
          className="container"
        >
          <h1
            className="title"
          >
            Welcome, 2ad0a95a-8e94-4c2b-b6aa-4c07fb7a1575
          </h1>
        </div>
      </section>
      <section
        className="section"
      >
        <div
          className="container"
        >
          <h1
            className="title"
          >
            My Properties
          </h1>
          <div
            className="media"
          >
            <img
              alt="Generic placeholder"
              className="mr-3"
              height={64}
              src="https://cdngeneral.rentcafe.com/dmslivecafe/3/317695/Exterior%20View%20of%20Oxmoor%20Apartments.jpg?crop=(0,20,300,200)&cropxunits=300&cropyunits=200&quality=85&scale=both&"
              width={64}
            />
            <div
              className="media-body"
            >
              <h5>
                525 West Main Street
              </h5>
              <p>
                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
              </p>
            </div>
          </div>
           
        </div>
      </section>
      <section
        className="section"
      >
        <div
          className="container"
        >
          <h1
            className="title"
          >
            Recent Properties
          </h1>
          <div
            className="media"
          >
            <img
              alt="Generic placeholder"
              className="mr-3"
              height={64}
              src="https://www.brac.com/photos/30/xlarge/30_111128_031732_9694.jpg"
              width={64}
            />
            <div
              className="media-body"
            >
              <h5>
                5254 Ridge Street
              </h5>
              <p>
                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
              </p>
            </div>
          </div>
          <div
            className="media"
          >
            <img
              alt="Generic placeholder"
              className="mr-3"
              height={64}
              src="https://lh3.googleusercontent.com/proxy/OeVKE4Q0tMvsVsbshykH5CGiTicQ-0vqNobrsNhPZwGAOwL5G158dZuzAZaf2oE6O-D6-b4dzFF242rhmXbQa8yXXSVeGDxXS-DBkaOiNBygn_E3FfVAltO4"
              width={64}
            />
            <div
              className="media-body"
            >
              <h5>
                99 Avon Street
              </h5>
              <p>
                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
              </p>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
  <footer
    className="App-footer"
  >
    ©Code for Charlottesville |
     
    <a
      href="https://brigade.codeforamerica.org/brigades/Code-for-Charlottesville/"
    >
      Brigade Website
    </a>
     
    | 
    <a
      href="/LICENSE"
    >
      License
    </a>
     | 
    <a
      href="/VERSION"
    >
      Version
    </a>
  </footer>
</div>
`;

exports[`components Footer 1`] = `
<footer
  className="App-footer"
>
  ©Code for Charlottesville |
   
  <a
    href="https://brigade.codeforamerica.org/brigades/Code-for-Charlottesville/"
  >
    Brigade Website
  </a>
   
  | 
  <a
    href="/LICENSE"
  >
    License
  </a>
   | 
  <a
    href="/VERSION"
  >
    Version
  </a>
</footer>
`;

exports[`components InputField 1`] = `
<div>
  <label />
  <div>
    <input
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`components InputFieldNum 1`] = `
<div>
  <label />
  <div>
    <input
      min="0"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`components LoadingSpinner 1`] = `
<div
  className="spinner-border"
  role="status"
/>
`;

exports[`components Logout 1`] = `
<div
  className="spinner-border"
  role="status"
/>
`;

exports[`components Navbar 1`] = `
<nav
  className="navbar navbar-expand-true navbar-dark bg-dark"
>
  <button
    aria-controls="responsive-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
</nav>
`;

exports[`components NewPropForm 1`] = `
<div
  className="container"
>
  <h1>
    Add New Property
  </h1>
  <hr />
  <h2>
    Property Details
  </h2>
  <form
    action=""
    onSubmit={[Function]}
  >
    <div>
      <div>
        <label>
          Property Name (if multi-unit complex): 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Flats"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Address: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. 1111 Main Street"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Unit / Apt no. (if applicable): 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Apt B"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Floor no. (if applicable): 
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 2"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Zip Code: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. 22902"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Type of Housing: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Apartment"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="numBeds"
        >
          Number of Bedrooms:
        </label>
        <div>
          <select
            id="numBeds"
            onChange={[Function]}
            value={0}
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="numBath"
        >
          Number of Bathrooms:
        </label>
        <div>
          <select
            id="numBath"
            onChange={[Function]}
            value={0}
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="1.5"
            >
              1.5
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="2.5"
            >
              2.5
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="3.5"
            >
              3.5
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="4.5"
            >
              4.5
            </option>
            <option
              value="5"
            >
              5
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="numBathsShared"
        >
          Number of Shared Bathrooms (with another property):
        </label>
        <div>
          <select
            id="numBathsShared"
            onChange={[Function]}
            value={0}
          >
            <option
              value="0"
            >
              0
            </option>
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="basementBool"
        >
          Does the Property Have a Basement?
        </label>
        <div>
          <select
            id="basementBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label>
          Property's School District: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Albermale"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="busLineBool"
        >
          Is the Property Near a Bus Stop?
        </label>
        <div>
          <select
            id="busLineBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="wheelchairBool"
        >
          Is the Property Wheelchair Accessible?
        </label>
        <div>
          <select
            id="wheelchairBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="elevatorBool"
        >
          Does the Property Have an Elevator?
        </label>
        <div>
          <select
            id="elevatorBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label>
          If not yet available, please specify below when the property will be available using the format MM-dd-YYYY. The default will be the current date if left as is.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="MM-dd-YYYY"
            type="date"
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the potential months available for the property.
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 12"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Please specify below when the property was first listed using the format MM-dd-YYYY. The default will be the current date if left as is.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. 01-15-2020"
            type="date"
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="whereListed"
        >
          Please check the locations where this property was listed.
        </label>
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Trulia"
          />
          Trulia
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Zillow"
          />
          Zillow
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Other"
          />
          Other
        </label>
      </div>
      <div>
        <label
          htmlFor="contactMethod"
        >
          Please check the preferred contact methods for the property's landlord.
        </label>
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Phone"
          />
          Phone
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Email"
          />
          Email
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Registered sites"
          />
          Registered Site
        </label>
      </div>
      <div>
        <label>
          Please specify below when the property's landlord was last contacted.  The default will be the current date if left as is.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="MM-dd-YYY"
            type="date"
          />
        </div>
      </div>
    </div>
    <h2>
      Payment Details
    </h2>
    <div
      className="box"
    >
      <div>
        <label>
          What is the Monthly Rent of the Property?
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 1200"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the application fee, if any, for the property.
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 250"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the deposit amount for the property
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 800"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="lastMonthBool"
        >
          Is the last month's rent required for the property?
        </label>
        <div>
          <select
            id="lastMonthBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="vouchersAccepted"
        >
          Please specify 'Yes' or 'No' for the vouchers accepted as payment for the property.
        </label>
        <div>
          <label>
            CSRAP
          </label>
          <div>
            <label>
              <input
                name="CSRAP"
                onChange={[Function]}
                type="radio"
                value="CSRAP"
              />
              Yes
            </label>
            <label>
              <input
                name="CSRAP"
                onChange={[Function]}
                type="radio"
                value="CSRAP"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            HCV
          </label>
          <div>
            <label>
              <input
                name="HCV"
                onChange={[Function]}
                type="radio"
                value="HCV"
              />
              Yes
            </label>
            <label>
              <input
                name="HCV"
                onChange={[Function]}
                type="radio"
                value="HCV"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            MSV
          </label>
          <div>
            <label>
              <input
                name="MSV"
                onChange={[Function]}
                type="radio"
                value="MSV"
              />
              Yes
            </label>
            <label>
              <input
                name="MSV"
                onChange={[Function]}
                type="radio"
                value="MSV"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            Voucher 4
          </label>
          <div>
            <label>
              <input
                name="Voucher 4"
                onChange={[Function]}
                type="radio"
                value="Voucher 4"
              />
              Yes
            </label>
            <label>
              <input
                name="Voucher 4"
                onChange={[Function]}
                type="radio"
                value="Voucher 4"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            Voucher 5
          </label>
          <div>
            <label>
              <input
                name="Voucher 5"
                onChange={[Function]}
                type="radio"
                value="Voucher 5"
              />
              Yes
            </label>
            <label>
              <input
                name="Voucher 5"
                onChange={[Function]}
                type="radio"
                value="Voucher 5"
              />
              No
            </label>
          </div>
        </div>
      </div>
      <div>
        <label>
          If the property requires a credit screening, please specify the credit screening company used.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Creditrating.com"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the company typically used to conduct background checks for the property.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. background-screening.com"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          className="label"
          htmlFor="backgroundBool"
        >
          Does the property require applicants to have a clean criminal record?
        </label>
        <div>
          <select
            id="backgroundBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
    </div>
    <label>
      If all fields above are filled out correctly press 'Submit' to add this listing.
    </label>
    <div>
      <div>
        <button
          onClick={[Function]}
          title="Add property"
        >
          Submit
        </button>
      </div>
      <div>
        <button
          title="Return home"
        >
          Cancel
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`components Pagination 1`] = `<ul />`;

exports[`components PaymentDetailsForm 1`] = `
<div
  className="box"
>
  <div>
    <label>
      What is the Monthly Rent of the Property?
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 1200"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the application fee, if any, for the property.
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 250"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the deposit amount for the property
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 800"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="lastMonthBool"
    >
      Is the last month's rent required for the property?
    </label>
    <div>
      <select
        id="lastMonthBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="vouchersAccepted"
    >
      Please specify 'Yes' or 'No' for the vouchers accepted as payment for the property.
    </label>
    <div>
      <label>
        CSRAP
      </label>
      <div>
        <label>
          <input
            name="CSRAP"
            onChange={[Function]}
            type="radio"
            value="CSRAP"
          />
          Yes
        </label>
        <label>
          <input
            name="CSRAP"
            onChange={[Function]}
            type="radio"
            value="CSRAP"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        HCV
      </label>
      <div>
        <label>
          <input
            name="HCV"
            onChange={[Function]}
            type="radio"
            value="HCV"
          />
          Yes
        </label>
        <label>
          <input
            name="HCV"
            onChange={[Function]}
            type="radio"
            value="HCV"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        MSV
      </label>
      <div>
        <label>
          <input
            name="MSV"
            onChange={[Function]}
            type="radio"
            value="MSV"
          />
          Yes
        </label>
        <label>
          <input
            name="MSV"
            onChange={[Function]}
            type="radio"
            value="MSV"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        Voucher 4
      </label>
      <div>
        <label>
          <input
            name="Voucher 4"
            onChange={[Function]}
            type="radio"
            value="Voucher 4"
          />
          Yes
        </label>
        <label>
          <input
            name="Voucher 4"
            onChange={[Function]}
            type="radio"
            value="Voucher 4"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        Voucher 5
      </label>
      <div>
        <label>
          <input
            name="Voucher 5"
            onChange={[Function]}
            type="radio"
            value="Voucher 5"
          />
          Yes
        </label>
        <label>
          <input
            name="Voucher 5"
            onChange={[Function]}
            type="radio"
            value="Voucher 5"
          />
          No
        </label>
      </div>
    </div>
  </div>
  <div>
    <label>
      If the property requires a credit screening, please specify the credit screening company used.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Creditrating.com"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the company typically used to conduct background checks for the property.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. background-screening.com"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label
      className="label"
      htmlFor="backgroundBool"
    >
      Does the property require applicants to have a clean criminal record?
    </label>
    <div>
      <select
        id="backgroundBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`components PropDetailsForm 1`] = `
<div>
  <div>
    <label>
      Property Name (if multi-unit complex): 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Flats"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Address: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. 1111 Main Street"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Unit / Apt no. (if applicable): 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Apt B"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Floor no. (if applicable): 
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 2"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Zip Code: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. 22902"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Type of Housing: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Apartment"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="numBeds"
    >
      Number of Bedrooms:
    </label>
    <div>
      <select
        id="numBeds"
        onChange={[Function]}
        value={0}
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
        <option
          value="6"
        >
          6
        </option>
        <option
          value="7"
        >
          7
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="numBath"
    >
      Number of Bathrooms:
    </label>
    <div>
      <select
        id="numBath"
        onChange={[Function]}
        value={0}
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="1.5"
        >
          1.5
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="2.5"
        >
          2.5
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="3.5"
        >
          3.5
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="4.5"
        >
          4.5
        </option>
        <option
          value="5"
        >
          5
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="numBathsShared"
    >
      Number of Shared Bathrooms (with another property):
    </label>
    <div>
      <select
        id="numBathsShared"
        onChange={[Function]}
        value={0}
      >
        <option
          value="0"
        >
          0
        </option>
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="basementBool"
    >
      Does the Property Have a Basement?
    </label>
    <div>
      <select
        id="basementBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label>
      Property's School District: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Albermale"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="busLineBool"
    >
      Is the Property Near a Bus Stop?
    </label>
    <div>
      <select
        id="busLineBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="wheelchairBool"
    >
      Is the Property Wheelchair Accessible?
    </label>
    <div>
      <select
        id="wheelchairBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="elevatorBool"
    >
      Does the Property Have an Elevator?
    </label>
    <div>
      <select
        id="elevatorBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label>
      If not yet available, please specify below when the property will be available using the format MM-dd-YYYY. The default will be the current date if left as is.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="MM-dd-YYYY"
        type="date"
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the potential months available for the property.
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 12"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Please specify below when the property was first listed using the format MM-dd-YYYY. The default will be the current date if left as is.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. 01-15-2020"
        type="date"
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="whereListed"
    >
      Please check the locations where this property was listed.
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Trulia"
      />
      Trulia
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Zillow"
      />
      Zillow
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Other"
      />
      Other
    </label>
  </div>
  <div>
    <label
      htmlFor="contactMethod"
    >
      Please check the preferred contact methods for the property's landlord.
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Phone"
      />
      Phone
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Email"
      />
      Email
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Registered sites"
      />
      Registered Site
    </label>
  </div>
  <div>
    <label>
      Please specify below when the property's landlord was last contacted.  The default will be the current date if left as is.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="MM-dd-YYY"
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`components PropertySearch 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        <div>
          <label>
            Zip Codes
          </label>
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="22903"
            />
            22903
          </label>
          <br />
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="22904"
            />
            22904
          </label>
          <br />
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="22935"
            />
            22935
          </label>
          <br />
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="22987"
            />
            22987
          </label>
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      <div>
        <div>
          <label>
            Housing Type
          </label>
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="Single Family Home"
            />
            Single Family Home
          </label>
          <br />
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="Apartment"
            />
            Apartment
          </label>
          <br />
          <label>
            <input
              onChange={[Function]}
              type="checkbox"
              value="Shared Apartment"
            />
            Shared Apartment
          </label>
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      <div>
        <label
          htmlFor="numBeds"
        >
          Bedrooms
        </label>
        <div
          className="select"
        >
          <select
            id="numBeds"
            onChange={[Function]}
            value={4}
          >
            <option
              hidden={true}
              value={true}
            >
              Select
            </option>
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="numBath"
        >
          Bathrooms
        </label>
        <div
          className="select"
        >
          <select
            id="numBath"
            onChange={[Function]}
            value={3.5}
          >
            <option
              hidden={true}
              value={true}
            >
              Select
            </option>
            <option
              value="1"
            >
              1
            </option>
            <option
              value="1.5"
            >
              1.5
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="2.5"
            >
              2.5
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="3.5"
            >
              3.5
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="4.5"
            >
              4.5
            </option>
            <option
              value="5"
            >
              5
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      <div>
        <label>
          Date Available
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="MM-dd-YYYY"
            type="date"
          />
        </div>
      </div>
      <div>
        <label>
          Max Rent
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="1200"
            type="number"
            value={0}
          />
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`components SearchHousingType 1`] = `
<div>
  <div>
    <label>
      Housing Type
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Single Family Home"
      />
      Single Family Home
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Apartment"
      />
      Apartment
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Shared Apartment"
      />
      Shared Apartment
    </label>
  </div>
</div>
`;

exports[`components SearchZipCode 1`] = `
<div>
  <div>
    <label>
      Zip Codes
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22903"
      />
      22903
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22904"
      />
      22904
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22935"
      />
      22935
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22987"
      />
      22987
    </label>
  </div>
</div>
`;

exports[`components Sidebar 1`] = `
<div>
  <div
    className="bm-overlay"
    onClick={[Function]}
    style={
      Object {
        "MozTransform": "translate3d(100%, 0, 0)",
        "MsTransform": "translate3d(100%, 0, 0)",
        "OTransform": "translate3d(100%, 0, 0)",
        "WebkitTransform": "translate3d(100%, 0, 0)",
        "background": "rgba(0, 0, 0, 0.3)",
        "height": "100%",
        "opacity": 0,
        "position": "fixed",
        "transform": "translate3d(100%, 0, 0)",
        "transition": "opacity 0.3s, transform 0s 0.3s",
        "width": "100%",
        "zIndex": 1000,
      }
    }
  />
  <div
    className="bm-menu-wrap"
    id=""
    style={
      Object {
        "MozTransform": "translate3d(-100%, 0, 0)",
        "MsTransform": "translate3d(-100%, 0, 0)",
        "OTransform": "translate3d(-100%, 0, 0)",
        "WebkitTransform": "translate3d(-100%, 0, 0)",
        "height": "100%",
        "position": "fixed",
        "right": "inherit",
        "transform": "translate3d(-100%, 0, 0)",
        "transition": "all 0.5s",
        "width": "300px",
        "zIndex": 1100,
      }
    }
  >
    <div
      className="bm-menu"
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100%",
          "overflow": "auto",
        }
      }
    >
      <nav
        className="bm-item-list"
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <div
          className="bm-item menu-item "
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex={-1}
        >
          <span
            className="circle"
          />
          <a
            href="/home"
            onClick={[Function]}
          >
            Home
          </a>
        </div>
        <div
          className="bm-item menu-item "
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex={-1}
        >
          <span
            className="circle"
          />
          <a
            href="/property/search"
            onClick={[Function]}
          >
            Property Search
          </a>
        </div>
        <div
          className="bm-item menu-item "
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex={-1}
        >
          <span
            className="circle"
          />
          <a
            href="/property/manage"
            onClick={[Function]}
          >
            Manage My Properties
          </a>
        </div>
        <div
          className="bm-item menu-item "
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex={-1}
        >
          <span
            className="circle"
          />
          <a
            href="/property/new"
            onClick={[Function]}
          >
            Create New Property
          </a>
        </div>
        <div
          className="bm-item menu-item "
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex={-1}
        >
          <span
            className="circle"
          />
          <a
            href="/logout"
            onClick={[Function]}
          >
            Logout
          </a>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`components Table 1`] = `
<table
  className="table table-striped table-bordered table-hover"
  table={true}
>
  <thead
    className="head"
  >
    <tr>
      <th>
        Property Type
      </th>
      <th>
        Address
      </th>
      <th>
        Rent
      </th>
      <th>
        Bedrooms
      </th>
      <th>
        Bathrooms
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`components VoucherInputs 1`] = `
<div>
  <label
    htmlFor="vouchersAccepted"
  >
    Please specify 'Yes' or 'No' for the vouchers accepted as payment for the property.
  </label>
  <div>
    <label>
      CSRAP
    </label>
    <div>
      <label>
        <input
          name="CSRAP"
          onChange={[Function]}
          type="radio"
          value="CSRAP"
        />
        Yes
      </label>
      <label>
        <input
          name="CSRAP"
          onChange={[Function]}
          type="radio"
          value="CSRAP"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      HCV
    </label>
    <div>
      <label>
        <input
          name="HCV"
          onChange={[Function]}
          type="radio"
          value="HCV"
        />
        Yes
      </label>
      <label>
        <input
          name="HCV"
          onChange={[Function]}
          type="radio"
          value="HCV"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      MSV
    </label>
    <div>
      <label>
        <input
          name="MSV"
          onChange={[Function]}
          type="radio"
          value="MSV"
        />
        Yes
      </label>
      <label>
        <input
          name="MSV"
          onChange={[Function]}
          type="radio"
          value="MSV"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      Voucher 4
    </label>
    <div>
      <label>
        <input
          name="Voucher 4"
          onChange={[Function]}
          type="radio"
          value="Voucher 4"
        />
        Yes
      </label>
      <label>
        <input
          name="Voucher 4"
          onChange={[Function]}
          type="radio"
          value="Voucher 4"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      Voucher 5
    </label>
    <div>
      <label>
        <input
          name="Voucher 5"
          onChange={[Function]}
          type="radio"
          value="Voucher 5"
        />
        Yes
      </label>
      <label>
        <input
          name="Voucher 5"
          onChange={[Function]}
          type="radio"
          value="Voucher 5"
        />
        No
      </label>
    </div>
  </div>
</div>
`;
